--- a/Contacto.html
+++ b/Contacto.html
@@ -89,7 +89,7 @@
     <nav>
         <a class="ripple" href="index.html">Inicio</a>
         <a class="ripple" href="about.html">Sobre Nosotros</a>
-        <a class="ripple" href="download.html">Descargar</a>
+        <a class="ripple" href="welcome-form.html">Descargar</a>
         <a class="ripple" href="contacto.html">Contacto</a>
     </nav>
 
@@ -194,3 +194,4 @@
     </footer>
 </body>
 </html>
+
