--- a/About.html
+++ b/About.html
@@ -116,7 +116,7 @@
     
     <nav>
         <a class="ripple" href="index.html">Inicio</a>
-        <a class="ripple" href="about.html">Sobre Nosotros</a>
+        <a class="ripple" href="About.html">Sobre Nosotros</a>
         <a class="ripple" href="download.html">Descargar</a>
         <a class="ripple" href="contacto.html">Contacto</a>
     </nav>
