--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <nav>
         <a class="ripple" href="index.html">Inicio</a>
         <a class="ripple" href="About.html">Sobre Nosotros</a>
-        <a class="ripple" href="download.html">Descargar</a>
+        <a class="ripple" href="download.html">Iniciar sección</a>
         <a class="ripple" href="Contacto.html">Contacto</a>
     </nav>
     
