--- a/download.html
+++ b/download.html
@@ -89,7 +89,7 @@
     <!--<img src="../Imagenes/logo.png" alt="" width="50px" height="50px">-->
         <a class="ripple" href="index.html">Inicio</a>
         <a class="ripple" href="About.html">Sobre Nosotros</a>
-        <a class="ripple" href="Download.html">Descargar</a>
+        <a class="ripple" href="download.html">Iniciar sección</a>
         <a class="ripple" href="Contacto.html">Contacto</a>
     </nav>
 
@@ -135,3 +135,4 @@
     </footer>
 </body>
 </html>
+
