--- a/Contacto.html
+++ b/Contacto.html
@@ -89,8 +89,8 @@
     <nav>
         <a class="ripple" href="index.html">Inicio</a>
         <a class="ripple" href="about.html">Sobre Nosotros</a>
-        <a class="ripple" href="download.html">Descargar</a>
-        <a class="ripple" href="contacto.html">Contacto</a>
+        <a class="ripple" href="download.html">Iniciar sección</a>
+        <a class="ripple" href="Contacto.html">Contacto</a>
     </nav>
 
     <section class="container fade-in">
@@ -194,5 +194,6 @@
     </footer>
 </body>
 </html>
+
 
 
